[project]
name = "mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "openinference-instrumentation-smolagents>=0.1.10",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "pydantic>=2.11.3",
    "smolagents[mcp,openai,telemetry]>=1.13.0",
]
